--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-routes": "^0.2.6"
+    "react-routes": "^0.2.6",
+    "react-scripts": "^3.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -17,13 +18,23 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "test": "npm run test",
-    "build": "bundle.js"
+    "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
