--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "dependencies": {
     "react": "^16.12.0",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-favicon": "0.0.17",
     "react-router-dom": "^5.1.2",
     "react-routes": "^0.2.6",
     "react-scripts": "^3.3.0"
