--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "eslint": "^6.8.0",
     "react": "^16.12.0",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.0.0-beta.16",
