--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-favicon": "0.0.17",
     "react-router-dom": "^5.1.2",
     "react-routes": "^0.2.6",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-twitch-embed-video": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -24,7 +25,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development --watch --watch-poll",
     "test": "npm run test",
     "build": "react-scripts build"
   },
