--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-favicon": "0.0.17",
     "react-router-dom": "^5.1.2",
     "react-routes": "^0.2.6",
-    "react-scripts": "^3.3.0",
-    "react-twitch-embed-video": "^2.0.4"
+    "react-scripts": "^3.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
